<resources>
    <string name="app_name">Gjaldbrot</string>
    <string name="title_activity_navigation">Gjaldbrot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gjaldbrot</string>
    <string name="nav_header_subtitle">Menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_month_comparison">Show monthly comparison</string>
    <string name="menu_month_overview">Show monthly overview</string>
    <string name="menu_all_receipts">All receipts</string>
    <string name="menu_add_type">Add type</string>
    <string name="menu_add_receipt">Add receipt</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="photo">Photo</string>
    <string name="manually">Manually</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="type">Type></string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_types">Add Types</string>
    <string name="all_types">All Types</string>
    <string name="all_types_list">All Types List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Gjaldbrot</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="shared_preferences">shared_preferences</string>
    <string name="token_file_key">user_token</string>
    <string name="enter_type_name">Enter type name</string>
    <string name="show_hide_type">Hide</string>
</resources>