<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_add_receipt"
            android:icon="@drawable/ic_addreceipt"
            android:title="@string/menu_add_receipt" />
        <item
            android:id="@+id/addTypeFragment"
            android:checkable="false"
            android:icon="@drawable/ic_newtype"
            android:title="@string/menu_add_type" />
        <item
            android:id="@+id/nav_all_receipts"
            android:icon="@drawable/ic_allreceipts"
            android:title="@string/menu_all_receipts" />
        <item
            android:id="@+id/nav_month_overview"
            android:icon="@drawable/ic_overview"
            android:title="@string/menu_month_overview" />
        <item
            android:id="@+id/nav_month_comparison"
            android:icon="@drawable/ic_comparison"
            android:title="@string/menu_month_comparison" />
    </group>
</menu>