<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="is.hi.hbv601g.gjaldbrotapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_month_overview"
        android:name="is.hi.hbv601g.gjaldbrotapp.ui.monthly_overview.MonthlyOverviewFragment"
        android:label="@string/menu_month_overview"
        tools:layout="@layout/fragment_monthly_overview" />

    <fragment
        android:id="@+id/nav_all_receipts"
        android:name="is.hi.hbv601g.gjaldbrotapp.ui.all_receipts.AllReceiptsFragment"
        android:label="@string/menu_all_receipts"
        tools:layout="@layout/fragment_all_receipts" />

    <fragment
        android:id="@+id/nav_month_comparison"
        android:name="is.hi.hbv601g.gjaldbrotapp.ui.monthly_comparison.MonthlyComparisonFragment"
        android:label="@string/menu_month_comparison"
        tools:layout="@layout/fragment_month_comparison" />
</navigation>